@@ -1,3 +1,5 @@
+Changed the random 1D walk on the DNA for the transcription factors to stay a bit longer and detach more consistently.
+Changed the random 1D walk on the DNA for RNA polymerase to stay a bit longer and detach more consistently.
 Changed the default velocity of the motion when molecules and connecting with one another to be slower in order to look more natural.
 Fixed gene labels to start at 1 instead of 0.
 Made Reset All button not visible when zoomed out.
